--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 ---
 layout: default
-title: Minimal Jekyll Site
+title: Testing Site
 ---
 <h1>Welcome to the Testing Site</h1>
-<p>This is a minimal static site for testing purposes. No Jekyll blog, no markdown, just clean HTML and SCSS.</p>
-<a href="/about">About</a>
