--- a/style.html
+++ b/style.html
@@ -1,7 +1,11 @@
 ---
 layout: default
-title: BRUTA • MONO
 ---
+
+<div class="bruta-box">
+  <h1>Design System Showcase</h1>
+  <p>A comprehensive display of our brutalist design components.</p>
+</div>
 
 <div class="theme-indicator"></div>
 
@@ -97,6 +101,25 @@ title: BRUTA • MONO
 
 <div class="bruta-separator"></div>
 
+<!-- Navigation Component -->
+<section>
+  <h2>Navigation Component</h2>
+  <p>Fixed navigation with responsive hamburger menu. Try resizing the window to see the mobile behavior.</p>
+  <div class="text-box">
+    <h3>Features:</h3>
+    <ul>
+      <li>Fixed position with z-index management</li>
+      <li>Responsive hamburger menu for mobile</li>
+      <li>Smooth drawer animation</li>
+      <li>Overlay backdrop for mobile</li>
+      <li>Active state management</li>
+      <li>Semantic HTML structure</li>
+    </ul>
+  </div>
+</section>
+
+<div class="bruta-separator"></div>
+
 <h2>Typography Hierarchy</h2>
 
 <p>Each heading level uses progressive geometric borders and bold uppercase styling to create clear visual hierarchy without color dependencies.</p>
@@ -178,34 +201,16 @@ const design = {
     <div class="text-box text-box-inverse">
       <p><strong>Inverse text box:</strong> High contrast version for maximum impact and attention-grabbing content.</p>
     </div>
-  </div>
-
-  <div class="demo-section">
-    <h4>Grid Layout</h4>
+  
     <div class="text-grid">
       <div class="text-box">
-        <h5>Column One</h5>
-        <p>Responsive grid system maintains brutalist aesthetic across different screen sizes.</p>
+        <h5>Grid Layout</h5>
+        <p>Text boxes can be arranged in responsive grids for organized content presentation.</p>
       </div>
       <div class="text-box">
-        <h5>Column Two</h5>
-        <p>Each column maintains consistent spacing and geometric design principles.</p>
-      </div>
-      <div class="text-box">
-        <h5>Column Three</h5>
-        <p>Perfect for showcasing multiple pieces of related content side by side.</p>
+        <h5>Consistent Spacing</h5>
+        <p>All components maintain uniform spacing and shadow treatments for visual cohesion.</p>
       </div>
     </div>
-  </div>
-
-  <div class="demo-section">
-    <h4>Dark Mode Compatibility</h4>
-    <p>The theme automatically detects your system's dark mode preference and inverts the monochrome colors accordingly:</p>
-    <ul>
-      <li><strong>Light Mode:</strong> White background, black text and borders</li>
-      <li><strong>Dark Mode:</strong> Black background, white text and borders</li>
-      <li><strong>Smooth Transitions:</strong> Colors change seamlessly when switching modes</li>
-      <li><strong>Consistent Aesthetic:</strong> Brutalist design maintained in both themes</li>
-    </ul>
   </div>
 </div> 
