--- a/index.html
+++ b/index.html
@@ -3,31 +3,5 @@ layout: default
 ---
 
 <div class="bruta-box">
-  <h1>Brutalist Design System</h1>
-  <p>A minimal, monochrome design framework for rapid prototyping and testing.</p>
-  <a href="/style" class="mono-button">View Style Guide</a>
+  <h1>testing...</h1>
 </div>
-
-<section>
-  <h2>Quick Start</h2>
-  <p>This is a barebone template designed for rapid UI development and testing. Perfect for AI-assisted coding sessions.</p>
-  
-  <div class="text-grid">
-    <div class="text-box">
-      <h3>Features</h3>
-      <ul>
-        <li>Brutalist aesthetic with Space Mono font</li>
-        <li>Automatic dark mode support</li>
-        <li>Responsive navigation with hamburger menu</li>
-        <li>Modular SCSS architecture</li>
-        <li>Ready-to-use components</li>
-      </ul>
-    </div>
-    
-    <div class="text-box">
-      <h3>Navigation</h3>
-      <p>Try the responsive navigation above. On mobile, it transforms into a hamburger menu with a smooth drawer animation.</p>
-      <p>The navigation is fixed and adapts to both light and dark modes automatically.</p>
-    </div>
-  </div>
-</section>
