--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
 layout: default
+nav_order: 1
+nav_title: Home
 ---
 
-<div class="bruta-box">
+<section>
   <h1>testing...</h1>
-</div>
+</section>
