--- a/style.html
+++ b/style.html
@@ -1,216 +1,126 @@
 ---
 layout: default
+nav_order: 2
+nav_title: Style
 ---
 
-<div class="bruta-box">
-  <h1>Design System Showcase</h1>
-  <p>A comprehensive display of our brutalist design components.</p>
-</div>
+<section>
+  <h1>Style Guide</h1>
+</section>
 
-<div class="theme-indicator"></div>
+<p>Basic components for the brutalist design system.</p>
 
-<h1>BRUTA • MONO</h1>
+<hr>
 
-<p>A raw, edgy take on brutalist design meets clean monochrome aesthetics. This is typography stripped down to its essential elements - bold, geometric, and unapologetically direct.</p>
+<h2>Typography</h2>
+<p>Headers and body text use <strong>Space Mono</strong> with clean styling.</p>
 
-<div class="text-box text-box-inverse">
-  <p><strong>🌓 AUTOMATIC DARK MODE:</strong> This theme automatically switches between light and dark modes based on your system preference. The monochrome colors invert seamlessly while maintaining the brutalist aesthetic.</p>
-</div>
+<h3>Headings</h3>
+<p>All headings use uppercase styling with bold weights.</p>
 
-<h2>Features</h2>
+<blockquote>
+  <p>This is a blockquote with the classic brutalist styling and geometric borders.</p>
+  <cite>Design System</cite>
+</blockquote>
 
-<div class="bruta-box">
-  <p><strong>BRUTALIST:</strong> Raw geometric shapes, stark contrasts, and bold typography create an uncompromising visual language.</p>
-  <p><strong>MONOCHROME:</strong> Pure black and white palette eliminates distractions and focuses on form and function.</p>
-  <p><strong>SPACE MONO:</strong> Google's monospace font delivers consistent character width and technical precision.</p>
-  <p><strong>ADAPTIVE:</strong> Automatically switches between light and dark themes based on system preferences.</p>
-</div>
+<h3>Lists</h3>
+
+<p>Unordered lists with custom bullet points:</p>
+<ul>
+  <li>First item with geometric bullet</li>
+  <li>Second item showing consistency</li>
+  <li>Third item maintaining spacing</li>
+</ul>
+
+<p>Ordered lists with custom numbering:</p>
+<ol>
+  <li>Numbered item with bold styling</li>
+  <li>Sequential numbering system</li>
+  <li>Consistent visual hierarchy</li>
+</ol>
+
+<h3>Code Elements</h3>
+
+<p>Inline code looks like this: <code>const brutalist = true;</code> with inverted colors.</p>
+
+<p>Code blocks maintain the monospace aesthetic:</p>
+<pre><code>// Brutalist code block
+function createComponent() {
+  return {
+    style: 'brutalist',
+    theme: 'monochrome'
+  };
+}</code></pre>
 
 <h3>Interactive Elements</h3>
+<p>Links have <a href="#">bold treatment</a> that transforms on hover.</p>
 
-<p>Links have a distinctive <a href="#">BOLD TREATMENT</a> that transforms on hover with geometric shadows and movement.</p>
+<button class="mono-button">Click Me</button>
 
-<button class="mono-button">CLICK ME</button>
-
-<div class="bruta-separator"></div>
+<hr>
 
 <h2>Form Elements</h2>
 
-<p>Form controls maintain the brutalist aesthetic with bold borders, geometric shadows, and monospace typography.</p>
-
 <form>
-  <div class="form-row">
-    <div class="form-group">
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" placeholder="Enter your name">
-    </div>
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" placeholder="your@email.com">
-    </div>
+  <div>
+    <label for="name">Name</label>
+    <input type="text" id="name" placeholder="Your name">
   </div>
   
-  <div class="form-group">
+  <div>
+    <label for="email">Email</label>
+    <input type="email" id="email" placeholder="your@email.com">
+  </div>
+  
+  <div>
     <label for="subject">Subject</label>
     <select id="subject" name="subject">
       <option value="">Choose a subject</option>
-      <option value="general">General Inquiry</option>
-      <option value="support">Support Request</option>
+      <option value="general">General inquiry</option>
+      <option value="support">Support request</option>
       <option value="feedback">Feedback</option>
     </select>
   </div>
   
-  <div class="form-group">
+  <div>
     <label for="message">Message</label>
-    <textarea id="message" name="message" placeholder="Type your message here..."></textarea>
+    <textarea id="message" placeholder="Type your message..."></textarea>
   </div>
   
-  <div class="form-group">
-    <label>Preferred Contact Method</label>
-    <div class="radio-group">
-      <div class="radio-item">
-        <input type="radio" id="contact-email" name="contact" value="email">
-        <label for="contact-email">Email</label>
-      </div>
-      <div class="radio-item">
-        <input type="radio" id="contact-phone" name="contact" value="phone">
-        <label for="contact-phone">Phone</label>
-      </div>
-    </div>
-  </div>
+  <fieldset>
+    <legend>Contact Method</legend>
+    <label>
+      <input type="radio" name="contact" value="email">
+      Email
+    </label>
+    <label>
+      <input type="radio" name="contact" value="phone">
+      Phone
+    </label>
+  </fieldset>
   
-  <div class="form-group">
-    <label>Options</label>
-    <div class="checkbox-group">
-      <div class="checkbox-item">
-        <input type="checkbox" id="newsletter" name="newsletter" value="yes">
-        <label for="newsletter">Subscribe to newsletter</label>
-      </div>
-      <div class="checkbox-item">
-        <input type="checkbox" id="updates" name="updates" value="yes">
-        <label for="updates">Receive updates</label>
-      </div>
-    </div>
-  </div>
+  <fieldset>
+    <legend>Preferences</legend>
+    <label>
+      <input type="checkbox" name="newsletter" value="yes">
+      Newsletter updates
+    </label>
+    <label>
+      <input type="checkbox" name="notifications" value="yes">
+      Email notifications
+    </label>
+  </fieldset>
   
-  <div class="form-actions">
-    <button type="submit">SEND MESSAGE</button>
-    <button type="reset">RESET FORM</button>
+  <div>
+    <button type="submit">Send</button>
+    <button type="reset">Reset</button>
   </div>
 </form>
 
-<div class="bruta-separator"></div>
-
-<!-- Navigation Component -->
-<section>
-  <h2>Navigation Component</h2>
-  <p>Fixed navigation with responsive hamburger menu. Try resizing the window to see the mobile behavior.</p>
-  <div class="text-box">
-    <h3>Features:</h3>
-    <ul>
-      <li>Fixed position with z-index management</li>
-      <li>Responsive hamburger menu for mobile</li>
-      <li>Smooth drawer animation</li>
-      <li>Overlay backdrop for mobile</li>
-      <li>Active state management</li>
-      <li>Semantic HTML structure</li>
-    </ul>
-  </div>
-</section>
-
-<div class="bruta-separator"></div>
-
-<h2>Typography Hierarchy</h2>
-
-<p>Each heading level uses progressive geometric borders and bold uppercase styling to create clear visual hierarchy without color dependencies.</p>
-
-<h3>Clean & Modern</h3>
-
-<p>The monochrome approach works perfectly in tech and design contexts, providing a timeless aesthetic that focuses on content over decoration.</p>
-
 <hr>
 
-<h2>Extended Typography Showcase</h2>
+<h2>Components</h2>
 
-<div class="typography-demo">
-  <div class="demo-section">
-    <h4>Text Sizes & Weights</h4>
-    <p class="text-large">Large text for emphasis and impact</p>
-    <p>Regular body text with optimal readability</p>
-    <p class="text-small">Small text for fine print and details</p>
-    <p><strong>Bold text</strong> for emphasis within content</p>
-    <p><em>Italic text</em> for subtle emphasis</p>
-  </div>
-
-  <div class="demo-section">
-    <h4>Special Text Treatments</h4>
-    <p class="text-caps">Uppercase text with letter spacing</p>
-    <p class="text-mono">Monospace text for technical content</p>
-    <p class="text-strike">Strikethrough text for corrections</p>
-    <p class="text-underline">Underlined text for emphasis</p>
-    <p>Text with <span class="text-highlight">highlighted sections</span> for callouts</p>
-    <p class="text-center">Centered text for special emphasis</p>
-  </div>
-
-  <div class="demo-section">
-    <h4>Code & Technical Content</h4>
-    <p>Inline code example: <code>function brutalist() { return 'raw'; }</code></p>
-    <pre><code>// Code block example
-const design = {
-  style: 'brutalist',
-  colors: ['black', 'white'],
-  font: 'Space Mono',
-  aesthetic: 'raw & edgy',
-  darkMode: 'automatic'
-};</code></pre>
-  </div>
-
-  <div class="demo-section">
-    <h4>Lists & Organization</h4>
-    <h5>Unordered List:</h5>
-    <ul>
-      <li>Geometric bullet points</li>
-      <li>Consistent spacing</li>
-      <li>Monospace precision</li>
-      <li>Bold visual hierarchy</li>
-    </ul>
-    
-    <h5>Ordered List:</h5>
-    <ol>
-      <li>Numbered items with custom styling</li>
-      <li>Progressive numbering</li>
-      <li>Brutalist aesthetic maintained</li>
-      <li>Clear visual progression</li>
-    </ol>
-  </div>
-
-  <div class="demo-section">
-    <h4>Quotes & Citations</h4>
-    <blockquote>
-      <p>Good design is as little design as possible. Less, but better - because it concentrates on the essential aspects.</p>
-      <cite>Dieter Rams</cite>
-    </blockquote>
-  </div>
-
-  <div class="demo-section">
-    <h4>Text Boxes & Containers</h4>
-    <div class="text-box">
-      <p><strong>Standard text box:</strong> Perfect for highlighting important information with the signature brutalist border and shadow treatment.</p>
-    </div>
-    
-    <div class="text-box text-box-inverse">
-      <p><strong>Inverse text box:</strong> High contrast version for maximum impact and attention-grabbing content.</p>
-    </div>
-  
-    <div class="text-grid">
-      <div class="text-box">
-        <h5>Grid Layout</h5>
-        <p>Text boxes can be arranged in responsive grids for organized content presentation.</p>
-      </div>
-      <div class="text-box">
-        <h5>Consistent Spacing</h5>
-        <p>All components maintain uniform spacing and shadow treatments for visual cohesion.</p>
-      </div>
-    </div>
-  </div>
-</div> 
+<section>
+  <p>This is a basic content box with brutalist styling.</p>
+</section> 
