--- a/style.html
+++ b/style.html
@@ -1,19 +1,18 @@
 ---
 layout: default
+title: Style Guide
 nav_order: 2
-nav_title: Style
 ---
 
 <section>
   <h1>Style Guide</h1>
+  <p>Basic components for the brutalist design system.</p>
 </section>
-
-<p>Basic components for the brutalist design system.</p>
 
 <hr>
 
 <h2>Typography</h2>
-<p>Headers and body text use <strong>Space Mono</strong> with clean styling.</p>
+<p>Headers and body text use <strong>Geist Mono</strong> with clean styling.</p>
 
 <h3>Headings</h3>
 <p>All headings use uppercase styling with bold weights.</p>
@@ -53,9 +52,9 @@ function createComponent() {
 }</code></pre>
 
 <h3>Interactive Elements</h3>
-<p>Links have <a href="#">bold treatment</a> that transforms on hover.</p>
+<p>Links have <a href="#">bold treatment</a>.</p>
 
-<button class="mono-button">Click Me</button>
+<button>Click Me</button>
 
 <hr>
 
