--- a/404.html
+++ b/404.html
@@ -1,7 +1,10 @@
 ---
 layout: default
-title: Page Not Found
+title: 404
 ---
-<h1>404 – Page Not Found</h1>
-<p>Sorry, the page you are looking for does not exist.</p>
-<a href="/">Go Home</a>
+
+<section>
+  <h1>404 – Page Not Found</h1>
+  <p>Sorry, the page you are looking for does not exist.</p>
+  <a href="/">Go Home</a>
+</section>
