--- a/style.html
+++ b/style.html
@@ -4,10 +4,8 @@ title: Style Guide
 nav_order: 2
 ---
 
-<section>
-  <h1>Style Guide</h1>
-  <p>Basic components for the brutalist design system.</p>
-</section>
+<h1>Style Guide</h1>
+<p>Basic components for the clean design system.</p>
 
 <hr>
 
@@ -18,7 +16,7 @@ nav_order: 2
 <p>All headings use uppercase styling with bold weights.</p>
 
 <blockquote>
-  <p>This is a blockquote with the classic brutalist styling and geometric borders.</p>
+  <p>This is a blockquote with clean styling and accent borders.</p>
   <cite>Design System</cite>
 </blockquote>
 
@@ -40,13 +38,13 @@ nav_order: 2
 
 <h3>Code Elements</h3>
 
-<p>Inline code looks like this: <code>const brutalist = true;</code> with inverted colors.</p>
+<p>Inline code looks like this: <code>const simple = true;</code> with inverted colors.</p>
 
 <p>Code blocks maintain the monospace aesthetic:</p>
-<pre><code>// Brutalist code block
+<pre><code>// Simple code block
 function createComponent() {
   return {
-    style: 'brutalist',
+    style: 'clean',
     theme: 'monochrome'
   };
 }</code></pre>
@@ -118,8 +116,8 @@ function createComponent() {
 
 <hr>
 
-<h2>Components</h2>
+<h2>Containers</h2>
 
 <section>
-  <p>This is a basic content box with brutalist styling.</p>
+  <p>This is a basic container with clean styling.</p>
 </section> 
