--- a/style.html
+++ b/style.html
@@ -4,8 +4,10 @@ title: Style Guide
 nav_order: 2
 ---
 
-<h1>Style Guide</h1>
-<p>Basic components for the clean design system.</p>
+<section>
+  <h1>Style Guide</h1>
+  <p>Basic components for the clean design system.</p>
+</section>
 
 <hr>
 
